fixed bugs with z-index

--- a/css/_navbar.css
+++ b/css/_navbar.css
@@ -3,7 +3,8 @@
     min-height: 50px;
     width: 100%;
     padding: 14px 0;
-    background-color: #000
+    background-color: #000;
+    z-index: 2;
 }
 
 .navbar__items {
